# soulx-podcast-mlx

./: .gitignore  DEVLOG.md  README.md  convert_weights.py  pyproject.toml  requirements-convert.txt  requirements.txt
examples/: example_zh.json
soulx_mlx/: __init__.py  flow_vocoder.py  input_prep.py  llm_stage.py  pipeline.py  s3_tokenizer_stage.py
